Header center align fix

--- a/portfolio website/css/style.css
+++ b/portfolio website/css/style.css
@@ -254,6 +254,10 @@ nav > ul {
   margin-top: 0;
 }
 
+#profile-pic img {
+  max-width: 200px;
+}
+
 /* Footer style starts here */
 .social-icon {
   width: 60px;
@@ -273,9 +277,12 @@ nav > ul {
   }
 }
 
-header {
+.navtoggle {
   text-align: unset;
   padding: 20px 0 13px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 nav {
@@ -330,6 +337,10 @@ nav > ul {
 /*Medium devices (1024px and larger)
 ================================================================================================== */
 @media only screen and (min-width: 1024px) {
+  .navtoggle {
+    display: block;
+  }
+
   .col-lg-7 {
     width: 58.33%;
   }
